[package]
name = "pqkd-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
axum = "0.7.9"
serde = "1.0.215"
toml = "0.8.19"
clap = { version = "4.5.21", features = ["derive"] }
serde_json = "1.0.133"
config = "0.14.0"
hyper = "1.5.1"
hyper-util = { version = "0.1.10", features = ["client-legacy"] }
native-tls = "0.2.12"
hyper-tls = "0.6.0"
petgraph = { version = "0.6.5", features = ["serde-1"] }
bytes = "1"
url = "2.5.4"
serde_qs = "0.13.0"
log = "0.4"
env_logger = "0.11.6"
thiserror = "2.0.9"
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22.1"
itertools = "0.14.0"
